Org settings & group settings (#628)
* updated organization settings

* updated organization and group settings queries and schemas

* db migrations and remove organization setting hook

* domain validation function, cleanup, pass linter and tests

* Update module github.com/trisacrypto/directory to v1.7.6 (#613)


* Update module github.com/Yamashou/gqlgenc to v0.19.3 (#615)


* Update testcontainers-go monorepo to v0.29.1 (#616)


* all vars need to be camel case, not snake case (#617)


* add aio yaml, update config, fix email base urls missing from config (#618)


* put cookies back to secure=false in dev (#614)


* cli and resolvers

* add organization_id field to organizationsettings

* removes create and delete operations from orgsettings.graphql

* allow for optional ids


* generate output

* add groupid field and edge

* add groupid to authz annotation

* Update cmd/cli/cmd/groupsetting/groupsetting_update.go


* Update internal/graphapi/organizationsetting.resolvers.go


* pr feedback

* genreate update

* remve group setting create and delete

---------
