# internal/ent/schema/organizationsetting.go
@@ -1,13 +1,23 @@
 package schema
 
 import (
+	"context"
+	"fmt"
+	"net/mail"
+	"net/url"
+	"regexp"
+
 	"entgo.io/contrib/entgql"
 	"entgo.io/ent"
 	"entgo.io/ent/schema"
 	"entgo.io/ent/schema/edge"
 	"entgo.io/ent/schema/field"
 
+	"github.com/datumforge/datum/internal/ent/generated"
+	"github.com/datumforge/datum/internal/ent/generated/privacy"
 	"github.com/datumforge/datum/internal/ent/mixin"
+	"github.com/datumforge/datum/internal/ent/privacy/rule"
+	"github.com/datumforge/fgax/entfga"
 )
 
 // OrganizationSetting holds the schema definition for the OrganizationSetting entity
@@ -18,30 +28,48 @@ type OrganizationSetting struct {
 // Fields of the OrganizationSetting
 func (OrganizationSetting) Fields() []ent.Field {
 	return []ent.Field{
-		field.JSON("domains", []string{}).
+		field.Strings("domains").
 			Comment("domains associated with the organization").
-			Optional(),
-		field.Text("sso_cert").
-			Optional(),
-		field.String("sso_entrypoint").
-			Optional(),
-		field.String("sso_issuer").
+			Validate(func(domains []string) error {
+				for _, domain := range domains {
+					u, err := url.Parse("http://" + domain)
+					if err != nil || u.Scheme == "" || u.Host == "" {
+						return fmt.Errorf("invalid domain: %s", domain)
+					}
+				}
+				return nil
+			}).
 			Optional(),
 		field.String("billing_contact").
 			Comment("Name of the person to contact for billing").
 			Optional(),
 		field.String("billing_email").
+			Comment("Email address of the person to contact for billing").
+			Validate(func(email string) error {
+				_, err := mail.ParseAddress(email)
+				return err
+			}).
 			Optional(),
 		field.String("billing_phone").
+			Comment("Phone number to contact for billing").
+			Validate(func(phone string) error {
+				regex := `^\+[1-9]{1}[0-9]{3,14}$`
+				_, err := regexp.MatchString(regex, phone)
+				return err
+			}).
 			Optional(),
 		field.String("billing_address").
+			Comment("Address to send billing information to").
 			Optional(),
 		field.String("tax_identifier").
 			Comment("Usually government-issued tax ID or business ID such as ABN in Australia").
 			Optional(),
-		field.JSON("tags", []string{}).
+		field.Strings("tags").
 			Comment("tags associated with the object").
 			Default([]string{}).
+			Optional(),
+		field.String("organization_id").
+			Comment("the ID of the organization the settings belong to").
 			Optional(),
 	}
 }
@@ -49,7 +77,7 @@ func (OrganizationSetting) Fields() []ent.Field {
 // Edges of the OrganizationSetting
 func (OrganizationSetting) Edges() []ent.Edge {
 	return []ent.Edge{
-		edge.From("organization", Organization.Type).Ref("setting").Unique(),
+		edge.From("organization", Organization.Type).Ref("setting").Field("organization_id").Unique(),
 	}
 }
 
@@ -59,6 +87,12 @@ func (OrganizationSetting) Annotations() []schema.Annotation {
 		entgql.QueryField(),
 		entgql.RelayConnection(),
 		entgql.Mutations(entgql.MutationCreate(), (entgql.MutationUpdate())),
+		entfga.Annotations{
+			ObjectType:      "organization",
+			IncludeHooks:    false,
+			IDField:         "OrganizationID",
+			NillableIDField: true,
+		},
 	}
 }
 
@@ -68,5 +102,24 @@ func (OrganizationSetting) Mixin() []ent.Mixin {
 		mixin.AuditMixin{},
 		mixin.IDMixin{},
 		mixin.SoftDeleteMixin{},
+	}
+}
+
+// Policy defines the privacy policy of the OrganizationSetting
+func (OrganizationSetting) Policy() ent.Policy {
+	return privacy.Policy{
+		Mutation: privacy.MutationPolicy{
+			rule.DenyIfNoSubject(),
+			privacy.OrganizationSettingMutationRuleFunc(func(ctx context.Context, m *generated.OrganizationSettingMutation) error {
+				return m.CheckAccessForEdit(ctx)
+			}),
+			privacy.AlwaysDenyRule(),
+		},
+		Query: privacy.QueryPolicy{
+			privacy.OrganizationSettingQueryRuleFunc(func(ctx context.Context, q *generated.OrganizationSettingQuery) error {
+				return q.CheckAccess(ctx)
+			}),
+			privacy.AlwaysDenyRule(),
+		},
 	}
 }
